Worked on getting all of the files to build with merging in our code to the scheduler code.
