# backend/internal/server/apis/sports/components/game.go
@@ -1,6 +1,7 @@
 package components
 
 import (
+	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 	"github.com/jak103/powerplay/internal/db"
 	"github.com/jak103/powerplay/internal/models"
@@ -13,32 +14,35 @@ import (
 func init() {
 	apis.RegisterHandler(fiber.MethodPost, "/game", auth.Authenticated, handleCreateGame)
 	apis.RegisterHandler(fiber.MethodPost, "/games", auth.Authenticated, handleCreateGames)
-	apis.RegisterHandler(fiber.MethodGet, "/game/:id", auth.Authenticated, handleGetGame)
+	apis.RegisterHandler(fiber.MethodGet, "/game/:id", auth.Authenticated, handleGetGameByID)
 	apis.RegisterHandler(fiber.MethodGet, "/games", auth.Authenticated, handleGetGames)
-	apis.RegisterHandler(fiber.MethodPut, "/game/:id", auth.Authenticated, handleUpdateGame)
+	apis.RegisterHandler(fiber.MethodGet, "/games/:id", auth.Authenticated, handleGetGamesBySeason)
+	apis.RegisterHandler(fiber.MethodPut, "/game/:id", auth.Authenticated, handleUpdateGameByID)
 	apis.RegisterHandler(fiber.MethodPut, "/games", auth.Authenticated, handleUpdateGames)
-	apis.RegisterHandler(fiber.MethodDelete, "/game/:id", auth.Authenticated, handleDeleteGame)
-	apis.RegisterHandler(fiber.MethodDelete, "/games", auth.Authenticated, handleDeleteGames)
+	apis.RegisterHandler(fiber.MethodDelete, "/game/:id", auth.Authenticated, handleDeleteGameByID)
+	apis.RegisterHandler(fiber.MethodDelete, "/games/:id", auth.Authenticated, handleDeleteGamesBySeason)
 }
 
 func handleCreateGame(c *fiber.Ctx) error {
-	type Dto struct {
-		Game models.Game `json:"game"`
+	db := db.GetSession(c)
+	var game models.Game
+	if err := c.BodyParser(&game); err != nil {
+		log.WithErr(err).Alert("Failed to parse game data")
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
 	}
-	var dto Dto
-	err := c.BodyParser(&dto)
+
+	// Validate request
+	validate := validator.New()
+	err := validate.Struct(game)
 	if err != nil {
-		log.Error("Failed to parse request body")
-		return responder.BadRequest(c, fiber.StatusBadRequest, err.Error())
+		return responder.BadRequest(c, "Failed to validate request")
 	}
-	game := dto.Game
-	session := db.GetSession(c)
-	_, err = session.SaveGame(game)
-	if err != nil {
-		log.Error("Failed to save game to the database")
-		return responder.InternalServerError(c, err)
+
+	if err := db.CreateGame(&game); err != nil {
+		log.WithErr(err).Alert("Failed to create Game in the database")
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
-	return responder.CreatedWithData(c, game)
+	return c.SendStatus(fiber.StatusCreated)
 }
 
 func handleCreateGames(c *fiber.Ctx) error {
@@ -53,7 +57,7 @@ func handleCreateGames(c *fiber.Ctx) error {
 	}
 	games := dto.Games
 	session := db.GetSession(c)
-	_, err = session.SaveGames(games)
+	_, err = session.CreateGames(games)
 	if err != nil {
 		log.Error("Failed to save games to the database")
 		return responder.InternalServerError(c, err)
@@ -61,7 +65,7 @@ func handleCreateGames(c *fiber.Ctx) error {
 	return responder.CreatedWithData(c, games)
 }
 
-func handleGetGame(c *fiber.Ctx) error {
+func handleGetGameByID(c *fiber.Ctx) error {
 	type Dto struct {
 		ID uint `json:"id"`
 	}
@@ -82,18 +86,8 @@ func handleGetGame(c *fiber.Ctx) error {
 }
 
 func handleGetGames(c *fiber.Ctx) error {
-	type Dto struct {
-		SeasonID uint `json:"season_id"`
-	}
-	var dto Dto
-	err := c.BodyParser(&dto)
-	if err != nil {
-		log.Error("Failed to parse request body")
-		return responder.BadRequest(c, fiber.StatusBadRequest, err.Error())
-	}
-	seasonID := dto.SeasonID
 	session := db.GetSession(c)
-	games, err := session.GetGames(seasonID)
+	games, err := session.GetGames()
 	if err != nil {
 		log.Error("Failed to get games from the database")
 		return responder.InternalServerError(c, err)
@@ -101,7 +95,27 @@ func handleGetGames(c *fiber.Ctx) error {
 	return responder.OkWithData(c, games)
 }
 
-func handleUpdateGame(c *fiber.Ctx) error {
+func handleGetGamesBySeason(c *fiber.Ctx) error {
+	type Dto struct {
+		ID uint `json:"id"`
+	}
+	var dto Dto
+	err := c.BodyParser(&dto)
+	if err != nil {
+		log.Error("Failed to parse request body")
+		return responder.BadRequest(c, fiber.StatusBadRequest, err.Error())
+	}
+	id := dto.ID
+	session := db.GetSession(c)
+	games, err := session.GetGamesBySeason(id)
+	if err != nil {
+		log.Error("Failed to get games from the database")
+		return responder.InternalServerError(c, err)
+	}
+	return responder.OkWithData(c, games)
+}
+
+func handleUpdateGameByID(c *fiber.Ctx) error {
 	type Dto struct {
 		Id   uint        `json:"id"`
 		Game models.Game `json:"game"`
@@ -120,7 +134,7 @@ func handleUpdateGame(c *fiber.Ctx) error {
 		log.Error("Failed to update game in the database")
 		return responder.InternalServerError(c, err)
 	}
-	return responder.Ok(c, game)
+	return responder.CreatedWithData(c, game)
 }
 
 func handleUpdateGames(c *fiber.Ctx) error {
@@ -140,10 +154,10 @@ func handleUpdateGames(c *fiber.Ctx) error {
 		log.Error("Failed to update games in the database")
 		return responder.InternalServerError(c, err)
 	}
-	return responder.Ok(c, games)
+	return responder.CreatedWithData(c, games)
 }
 
-func handleDeleteGame(c *fiber.Ctx) error {
+func handleDeleteGameByID(c *fiber.Ctx) error {
 	type Dto struct {
 		ID uint `json:"id"`
 	}
@@ -163,7 +177,7 @@ func handleDeleteGame(c *fiber.Ctx) error {
 	return responder.Ok(c)
 }
 
-func handleDeleteGames(c *fiber.Ctx) error {
+func handleDeleteGamesBySeason(c *fiber.Ctx) error {
 	type Dto struct {
 		SeasonID uint `json:"season_id"`
 	}
